la toate variabilele dupa DVI10

--- a/src/templates/01_cpis.html
+++ b/src/templates/01_cpis.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">{{T1271}}. {{T1272}}</div>
                 <select id="dvi10" name="dvi10" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi10-1}">{{T1509}}</option>
+                    <option value="{{dvi10-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5814,7 +5814,7 @@
                 <div class="ml-3">{{T1275}}. {{T1276}}</div>
                 <select id="dvi11" name="dvi11" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi11-1}} >{{T1509}}</option>
+                    <option value="{{dvi11-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5831,7 +5831,7 @@
                 <div class="ml-3">{{T1279}}. {{T1280}}</div>
                 <select id="dvi12" name="dvi12" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi12-1}} >{{T1509}}</option>
+                    <option value="{{dvi12-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5848,7 +5848,7 @@
                 <div class="ml-3">{{T1283}}. {{T1284}}</div>
                 <select id="dvi13" name="dvi13" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi13-1}} >{{T1509}}</option>
+                    <option value="{{dvi13-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5865,7 +5865,7 @@
                 <div class="ml-3">{{T1287}}. {{T1288}}</div>
                 <select id="dvi14" name="dvi14" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi14-1}} >{{T1509}}</option>
+                    <option value="{{dvi14-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5882,7 +5882,7 @@
                 <div class="ml-3">{{T1291}}. {{T1292}}</div>
                 <select id="dvi15" name="dvi15" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi15-1}} >{{T1509}}</option>
+                    <option value="{{dvi15-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5899,7 +5899,7 @@
                 <div class="ml-3">{{T1295}}. {{T1296}}</div>
                 <select id="dvi16" name="dvi16" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi16-1}} >{{T1509}}</option>
+                    <option value="{{dvi16-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5916,7 +5916,7 @@
                 <div class="ml-3">{{T1299}}. {{T1300}}</div>
                 <select id="dvi17" name="dvi17" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi17-1}} >{{T1509}}</option>
+                    <option value="{{dvi17-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5933,7 +5933,7 @@
                 <div class="ml-3">{{T1303}}. {{T1304}}</div>
                 <select id="dvi18" name="dvi18" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi18-1}} >{{T1509}}</option>
+                    <option value="{{dvi18-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5950,7 +5950,7 @@
                 <div class="ml-3">{{T1307}}. {{T1308}}</div>
                 <select id="dvi19" name="dvi19" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi19-1}} >{{T1509}}</option>
+                    <option value="{{dvi19-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5968,7 +5968,7 @@
                 <div class="ml-3">{{T1312}}. {{T1313}}</div>
                 <select id="dvi20" name="dvi20" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi20-1}} >{{T1509}}</option>
+                    <option value="{{dvi20-1}}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
