fix issues I2, I4 si I5

--- a/src/templates/04_qmr.html
+++ b/src/templates/04_qmr.html
@@ -1899,6 +1899,7 @@
             <div class="div3class mt-6">
                 <div class="div1class">
                     {{T0473}}. {{T0474}}
+                    <small class="smallclass">{{T0769}}</small>
                 </div>
                 <div class="div5class">
                     <div class="flex flex-col gap-4">
