--- a/src/templates/05_yplcs.html
+++ b/src/templates/05_yplcs.html
@@ -201,16 +201,16 @@
                 <div>
                     <select id="pi5" name="pi5" class="selectclass">
                         <option value="-9">{{T0597}}</option>
-                        <option value="{{lk12-1}}">{{T0061}}</option>
-                        <option value="{{lk12-2}}">{{T0062}}</option>
-                        <option value="{{lk12-3}}">{{T0063}}</option>
-                        <option value="{{lk12-4}}">{{T0064}}</option>
-                        <option value="{{lk12-5}}">{{T0065}}</option>
-                        <option value="{{lk12-6}}">{{T0066}}</option>
-                        <option value="{{lk12-7}}">{{T0067}}</option>
-                        <option value="{{lk12-8}}">{{T0068}}</option>
-                        <option value="{{lk12-9}}">{{T0069}}</option>
-                        <option value="{{lk12-10}}">{{T0070}}</option>
+                        <option value="{{pi5-1}}">{{T0061}}</option>
+                        <option value="{{pi5-2}}">{{T0062}}</option>
+                        <option value="{{pi5-3}}">{{T0063}}</option>
+                        <option value="{{pi5-4}}">{{T0064}}</option>
+                        <option value="{{pi5-5}}">{{T0065}}</option>
+                        <option value="{{pi5-6}}">{{T0066}}</option>
+                        <option value="{{pi5-7}}">{{T0067}}</option>
+                        <option value="{{pi5-8}}">{{T0068}}</option>
+                        <option value="{{pi5-9}}">{{T0069}}</option>
+                        <option value="{{pi5-10}}">{{T0070}}</option>
                     </select>
                 </div>
             </div>
